--- a/templates/result.html
+++ b/templates/result.html
@@ -9,8 +9,8 @@
   <h1>{{ result }}</h1>
 
   {% if confidence != "–" %}
-    <p><strong>Miera istoty predikcie:</strong> {{ confidence }}%</p>
   {% endif %}
+<p><strong>Miera spoľahlivosti predikcie:</strong> {{ confidence }} %</p>
 
   <hr>
   <h3>Rekapitulácia odpovedí:</h3>
